src/scss/pages/__quiz.scss
:root {
  --quiz-row-g: 1em;
  --quiz-question-fs: 1em;
  --quiz-answer-w: 100%;
  --quiz-answer-fs: 1.2em;
  --quiz-pag-s: 0.5em;
  --quiz-pictures-img-p: 0.2em;
  --quiz-answers-g: 1em;
}

@media (min-width: 768px) {
  :root {
    --quiz-row-g: 1em;
    --quiz-pictures-img-p: 0.3em;
    --quiz-question-fs: 1.5em;
    --quiz-answer-w: 40%;
    --quiz-answer-fs: 1.5em;
    --quiz-pag-s: 1em;
    --quiz-answers-g: 1em;
  }
}

@media (min-width: 1024px) {
  :root {
    --quiz-question-fs: 2em;
    --quiz-answers-g: 0.5em;
    --quiz-answer-fs: 1.7em;
  }
}

.quiz {
  display: flex;
  flex-direction: column;
  row-gap: var(--quiz-row-g);
  height: calc(var(--vh, 1vh) * 75);

  @media (min-height: 1024px) {
    height: 100%;
  }

  @for $i from 1 through 4 {
    &:nth-child(#{$i}) {
      @include page-animation($i, 0.4s);
    }
  }

  &__question {
    text-align: center;
    font-size: var(--quiz-question-fs);

    &.hidden {
      @include heading-animation;
    }
  }
}

.quiz__images {
  display: flex;
  flex-wrap: wrap;
  overflow: hidden;

  &.pictures {
    height: 100%;
  }

  &.artists {
    height: 60%;
  }

  .image {
    position: relative;
    display: flex;
    justify-content: center;
    border-radius: 10px;
    transition: 1s ease;

    &__hint {
      position: absolute;
      top: 1em;
      left: 1em;
      z-index: 2;
      display: none;

      @media (min-width: 420px) {
        top: 2em;
        left: 2em;
      }
    }

    &.artists {
      flex: 0 0 100%;
      height: 100%;
    }

    &.pictures {
      width: 100%;
      height: 25%;
      cursor: pointer;

      @media (min-width: 768px) {
        width: 50%;
        height: 50%;
      }

      padding: var(--quiz-pictures-img-p);

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &__img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      border-radius: 20px;
      transition: 0.3s;
      z-index: 1;
      // cursor: pointer;

      &.disabled {
        pointer-events: none;
        cursor: auto;
      }

      &.correct {
        z-index: 3;
        border: 10px solid var(--green);
        animation: zoom-in-zoom-out 1s ease;
      }

      &.incorrect {
        border: 10px solid var(--red);
        animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
      }
    }
  }
}

.quiz__pag {
  display: flex;
  justify-content: space-between;
  padding: 0 1em;

  .pag-item {
    width: var(--quiz-pag-s);
    height: var(--quiz-pag-s);
    border-radius: 100%;
    background-color: var(--grey);

    &.correct {
      background-color: var(--green);
    }

    &.incorrect {
      background-color: var(--red);
    }
  }
}

.quiz__answers {
  display: flex;
  flex-wrap: wrap;
  gap: var(--quiz-answers-g);

  &.hidden {
    display: none;
  }

  .answer-btn {
    flex: 1 1 var(--quiz-answer-w);
    padding: 1em;
    font-size: var(--quiz-answer-fs);
    background-color: var(--background-primary);
    text-align: left;
    outline: none;
    border: none;
    cursor: pointer;
    box-shadow: var(--shadow);
    border-radius: 10px;

    @for $i from 1 through 4 {
      &:nth-child(#{$i}).hidden {
        animation: slide-in-slide-out $i * 0.3s ease;
      }
    }

    &:hover {
      box-shadow: var(--inner-shadow);
    }

    &.correct {
      color: #fff;
      background-color: var(--green);
      animation: zoom-in-zoom-out 1s ease;
    }

    &.incorrect {
      color: #fff;
      background-color: var(--red);
      animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
    }

    &:disabled:hover {
      box-shadow: var(--shadow);
    }

    &:disabled {
      cursor: auto;
    }
  }
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%,
  80% {
    transform: translate3d(2px, 0, 0);
  }

  30%,
  50%,
  70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%,
  60% {
    transform: translate3d(4px, 0, 0);
  }
}

@keyframes zoom-in-zoom-out {
  50% {
    transform: scale(1, 1);
  }
}

@keyframes slide-in-slide-out {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0%);
  }
}

